Budget Buddy v2.2.9 - Bulk add listings with product price history (#34)
* feat: adding bulk add listings on front and back

* feat: guard if list already exist & fixed toast

* feat: price history shown on grocery (card as btn)

* Potential fix for pull request finding 'CodeQL / Database query built from user-controlled sources'


* Potential fix for pull request finding 'CodeQL / Database query built from user-controlled sources'


---------
